--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
 		"typescript-eslint": "^8.47.0",
 		"vite": "^7.2.4",
 		"vite-plugin-devtools-json": "^1.0.0"
+	},
+	"dependencies": {
+		"@vercel/analytics": "^1.6.1"
 	}
 }
